src/math_ops/snapshots/rbx_types_ops__math_ops__vec3__vec3_mult_vec3int16.snap
---
source: src/math_ops/vec3.rs
expression: "Vector3::new(15.0, 15.0, 15.0).mult(&Vector3int16::new(5, 10, 5).into())"
---
Vector3:
  - 75
  - 150
  - 75
