src/math_ops/snapshots/rbx_types_ops__math_ops__vec3__vec3_pow_f32.snap
---
source: src/math_ops/vec3.rs
expression: "Vector3::new(15.0, 15.0, 15.0).pow(&5f32.into())"
---
Vector3:
  - 759375
  - 759375
  - 759375
