src/math_ops/snapshots/rbx_types_ops__math_ops__vec3__vec3_pow_vec3.snap
---
source: src/math_ops/vec3.rs
expression: "Vector3::new(15.0, 15.0, 15.0).pow(&Vector3::new(5.0, 10.0, 5.0).into())"
---
Vector3:
  - 759375
  - 576650400000
  - 759375
